--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "chart.js": "^4.4.9",
+    "chartjs": "^0.3.24",
+    "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
     "flowbite-react-template-vite": "file:",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.1"
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/chart.js": "^2.9.41",
     "@types/react": "^19.1.2",
+    "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.24.0",
