--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
     "flowbite-react-template-vite": "file:",
+    "igniteui-react-charts": "^18.9.0",
+    "igniteui-react-core": "^18.9.0",
+    "igniteui-react-gauges": "^18.9.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
