--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "chartjs": "^0.3.24",
     "flowbite": "^3.1.2",
@@ -21,6 +22,7 @@
     "igniteui-react-charts": "^18.9.0",
     "igniteui-react-core": "^18.9.0",
     "igniteui-react-gauges": "^18.9.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/axios": "^0.9.36",
     "@types/chart.js": "^2.9.41",
     "@types/react": "^19.1.2",
     "@types/react-chartjs-2": "^2.0.2",
