set the pages back in order for the github version and added gemini ai

--- a/fakebackend/.env
+++ b/fakebackend/.env
@@ -3,3 +3,4 @@ DB_USER=root
 DB_PASSWORD=password
 DB_NAME=testdatabase
 JWT_SECRET=superSecretKey
+GEMINI_API_KEY=AIzaSyBOqwsbhtMy8psx554ccSfq4P_bbmFmlRU
